des_modification_modal

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -120,17 +120,14 @@
   animation: float 3s ease-in-out infinite;
 }
 
-/*~~ BOOKING MODAL */
-/* button */
+/*~~ BOOKING MODAL */ 
 .open-btn {
   padding: 12px 25px;
   background: #d60f0f;
   color: white;
   border: none;
   cursor: pointer;
-}
-
-/* modal background */
+} 
 .modal {
   position: fixed;
   inset: 0;
@@ -140,8 +137,7 @@
   justify-content: center;
   z-index: 1000; 
 }
-
-/* modal box */
+ 
 .modal-content {
   background: white;
   width: 80%;
@@ -150,7 +146,7 @@
   position: relative;
 }
 
-/* close */
+
 .close {
   position: absolute;
   right: 20px;
@@ -158,8 +154,7 @@
   font-size: 30px;
   cursor: pointer;
 }
-
-/* title */
+ 
 .modal-content h2 {
   text-align: center;
   margin-bottom: 30px;
@@ -167,22 +162,19 @@
 .modal-content span {
   color: red;
 }
-
-/* GRID */
+ 
 .modal-grid {
   display: grid;
   grid-template-columns: 45% 55%;
   gap: 30px;
 }
-
-/* image */
+ 
 .modal-img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-
-/* form */
+ 
 .modal-form {
   display: grid; 
   gap: 5px;
@@ -206,8 +198,7 @@
   padding: 10px;
   border: 1px solid #ccc;
 }
-
-
+ 
 /* & about */
 .AboutUs {
   margin: auto;
@@ -259,8 +250,9 @@
 .topAbout{
   text-align: center;
 }
+/** sectionLearnMore  */
 .learnMore{
-   background-color: rgb(212, 226, 226);
+   background-color: rgb(199, 208, 208);
    width: 98vw;
    height: 60vh;
    display: grid;
@@ -399,10 +391,11 @@
  .learnMore {
   display: flex;
   flex-direction: column;
+  height: 155vh;
  }
  .learnMore .cobin{
   display: flex;
   flex-direction: column;
  }
-
+ 
 }
