--- a/public/css/app.css
+++ b/public/css/app.css
@@ -297,6 +297,45 @@
     grid-template-columns: auto auto auto;
     gap: 10px;
 }
+.about-bottom {
+  position: relative;
+  height: 350px;
+}
+
+.about-bottom img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* div الشفاف */
+.overlay {
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.6); /* شفافية */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* grid ديال الأرقام */
+.stats-box {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 40px;
+  text-align: center;
+  color: white;
+}
+
+.stat h2 {
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.stat p {
+  font-size: 16px;
+  margin-top: 5px;
+}
 
 
 
@@ -337,14 +376,11 @@
   cursor: pointer;
 }
 
-.btn-video {
-  background: transparent;
-  border: none;
-  color: black;
-  font-size: 16px;
-  cursor: pointer;
-}
-
+.stats{
+  width: 98vw;
+  height: 60vh;
+  background-color: #4c4b4b2e;
+} 
 @media (max-width: 768px) {
 
   .nav-links {
