--- a/public/css/app.css
+++ b/public/css/app.css
@@ -307,18 +307,17 @@
   height: 100%;
   object-fit: cover;
 }
-
-/* div الشفاف */
+ /* stasistique */
 .overlay {
   position: absolute;
   inset: 0;
-  background: rgba(0, 0, 0, 0.6); /* شفافية */
+  background: rgba(0, 0, 0, 0.6); 
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-/* grid ديال الأرقام */
+
 .stats-box {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -337,9 +336,171 @@
   margin-top: 5px;
 }
 
+/* & menu */
 
+.chch1 {
+    font-size: 50px;
+    color: #ce1212;
+}
+.menu {
+    display: flex;
+    flex-direction: column;
+    padding-top: 5vh;
+    /* padding: 8vh 5vw; */
+    gap: 6vh;
+    align-items: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.head {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4vh;
+}
+.head h4 {
+    color: #5f6265;
+    font-size: 18px;
+    font-weight: 100;
+}
+.head h1 {
+    font-family: "hafsa";
+    font-size: 60px;
+}
+.head span {
+    font-family: "hafsa";
+    color: #ce1212;
+}
+.BTN  {
+    display: flex;
+    gap: 1vw;
+    align-items: center;
+    justify-content: center;
+}
+.BTN button {
+    background-color: transparent;
+    border: none;
+    font-size: 21px;
+    color: #37373fe3;
+    border-bottom: 2px solid #37373f56;
+    transition: all 0.2s ease;
+    padding-bottom: 3px;
+}
+.BTN button:hover {
+    border-bottom-color:#ce1212 ;
+}
+.small {
+    display: flex;
+    flex-direction: column;
+    gap: 5vh;
+}
+.title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1vh;
+}
+.title h4 {
+    color: #5f6265;
+    font-size: 18px;
+    font-weight: 100;
+}
+.title h1 {
+    font-family: "hafsa";
+    font-size: 50px;
+    color: #ce1212;
+}
+.realMenu {
+    width: 90vw;
+    display: grid;
+    grid-template-columns: repeat(3 , 1fr);
+    gap: 3vh;
+    /* background-color: #d53535; */
+    box-sizing: border-box;
+    overflow-x: hidden;
+    align-items: center;
+}
+.realMenu img {
+    width: 320px;
+}
+.realMenu div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2vh;
+}
+.realMenu div h2 {
+    color: #37373f;
+    font-family: "hafsa";
+    font-size: 30px;
+}
+.realMenu div p {
+    color: #5f6265;
+}
+.realMenu div h3 {
+    color: #ce1212;
+    font-family: "hafsa";
+    font-size: 30px;
+}
+/* & chef */
+.chef {
+    display: flex;
+    flex-direction: column;
+    gap: 2.5vh;
+    padding: 5vh 5vw;
+    align-items: center;
+}
+.chef h4 {
+    color: #5f6265;
+    font-weight: 100;
+    font-size: 20px;
+}
+.chch {
+    font-size: 44px;
+    color: #ce1212;
+}
+.chef h1 {
+    font-family: "hafsa";
+    font-size: 45px;
+}
+.chef h1 {
+    font-family: "hafsa";
+    font-size: 45px;
+}
+.chefs2 {
+    display: flex;
+    gap: 3vw;
+    padding: 2vh 5vw;
+    flex-wrap: wrap;
+    justify-content: center;
+    box-sizing: border-box;
+}
 
+.chefs2 div {
+    display: flex;
+    flex-direction: column;
+    gap: 2vh;
+    align-items: center;
+    text-align: center;
+    /* padding: 3vh 3vw;*/
+    box-shadow: 0 10px 15px rgba(0,0,0,0.1), 
+                0 4px 6px rgba(0,0,0,0.05);
+    max-width: 400px;
+    border-radius: 10px;
+    padding-bottom: 5vh;
+    transition: all 0.2s ease;
+}
 
+.chefs2 div:hover {
+    transform: translateY(-10px) scale(1.08);
+    box-shadow: 0 20px 30px rgba(0, 0, 0, 0.358);
+    z-index: 10;
+}
+
+.chefs2 img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
 
 
 
